syntax = "proto3";

package protobuf;

option go_package = "./";

import "objects.proto";

// API: ResolveError
// Operation:  RESOLVE_ERROR_REQUEST 0x18B1805B
// ResultType: RESOLVE_ERROR_RESULT  0xEC02BAC4
//------------------------------------------------------------------------------
message ResolveErrorRequest {
    Document document = 0x00000001;
}

message ResolveErrorResult {
}

//------------------------------------------------------------------------------
