syntax = "proto3";

package protobuf;

option go_package = "./";

import "objects.proto";

// API: SystemCall
//------------------------------------------------------------------------------
message SystemCallRequest {
    string command = 1;
}

message SystemCallResult {
}

// API: Echo
//------------------------------------------------------------------------------
message EchoRequest {
    Document document = 0x00000001;
}

message EchoResult {
    Document document = 0x00000001;
}

//------------------------------------------------------------------------------
